--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,8 @@ version = "0.5.2"
 default-features = false
 
 [dependencies.curve25519-dalek]
-package = "curve25519-dalek-ng"
-# git = "https://github.com/dalek-cryptography/curve25519-dalek"
-version = "4.0"
+package = "curve25519-dalek"
+version = "3.2"
 default-features = false
 
 # [dependencies.ed25519-dalek]
@@ -40,8 +39,8 @@ default-features = false
 # optional = true
 
 [dependencies.subtle]
-package = "subtle-ng"
-version = "2.2.1"
+package = "subtle"
+version = "2.4"
 default-features = false
 
 [dependencies.merlin]
@@ -128,4 +127,3 @@ getrandom = ["rand_core/getrandom"]
 # wasm-bindgen = ["getrandom/wasm-bindgen"]
 # See https://github.com/rust-lang/cargo/issues/9210
 # and https://github.com/w3f/schnorrkel/issues/65#issuecomment-786923588
-
